Fix filebot.sh script for OpenJDK 11